<resources>
    <string name="app_name">SleepWell</string>

    <string name="login">Log in</string>
    <string name="createAccount">Create Account</string>
    <string name="enterDetailsSubtitle">Please enter your details to continue</string>
    <string name="loginRedirect"><u>Log in</u></string>
    <string name="signUpRedirect"><u>Sign Up</u></string>
    <string name="retrieveAccountRedirect"><u>Retrieve Account</u></string>
    <string name="skip"><u>Skip</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sleep_well_logo">sleep well logo</string>
    <string name="app_intro_welcome_to_sleepwell">Welcome to SleepWell</string>
    <string name="next">next</string>
    <string name="load_node">load node</string>
    <string name="app_intro_monitor_your_sleep">Monitor your Sleep</string>
    <string name="app_intro_better_sleep_better_life">Better Sleep, Better Life</string>
</resources>