<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppIntro.AppIntro1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/fragment_roundedbox"
        android:paddingHorizontal="40dp"
        android:paddingVertical="54dp"
        android:layout_alignParentBottom="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/introTitle2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/app_intro_better_sleep_better_life"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:fontFamily="@font/montserrat_bold"/>

            <TextView
                android:id="@+id/introSubtitleText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="0"
                android:text="Take control of your wellbeing by having the best sleep."
                android:textAlignment="center"
                android:textColor="@color/text_white"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_regular"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/load_node"
                android:contentDescription="@string/load_node" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/load_node"
                android:contentDescription="@string/load_node" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/load_node_active"
                android:contentDescription="@string/load_node" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/skipIntroBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="12dp"
                android:paddingHorizontal="16dp"
                android:background="@drawable/button_second"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/skip"
                android:textColor="@color/text_white"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="12dp"
                android:paddingHorizontal="16dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/button_main"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/next"
                android:textColor="@color/text_white"
                android:textSize="16sp"
                android:textAllCaps="true" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>